syntax = "proto3";

package calculator_pb;
option go_package = "github.com/student31415/ComputingSystemsCourse/calculator_pb";

message CalculateRequest {
  string task = 1;
}

message CalculateResponse {
  uint64 time  = 1;
}

service Calculator {
  rpc Calculate (CalculateRequest) returns (CalculateResponse) {}
}